--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,102 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
+
+<head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <div class="flex-container">
+            <img src="/images/298.jpeg" height="200">
+            <div class="flex-head">
+                <i></i>
+                <h1> Hey, I'm Garret Morales! </h1>
+                <h2> I'm a Jr. Front End Engineer in St. Petersburg, FL. </h2>
+     </div>
+    </div>
+  </header>
+
+  <main>
+
+
+    <div class="main-container">
+      <ul>
+        <li><img src="/images/bomb-sniffer.png" alt="bombsniffer"></li>
+        <li><img src="/images/make-it-rain.png" alt="makeitrain"></li>
+        <li><img src="/images/sensei-sense.png" alt="sensei"></li>
+        <li><img src="/images/one-list.png" alt="list"></li>
+      </ul>
+    </div>
+
+
+
+    <section class="second-container">
+      <div class="imgbox"></div>
+      <div class="react">
+        <h2> Hello, React.<span> December 6th, 2017 </span></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum corporis tempore accusantium repellendus eius, facilis excepturi eum. Quia aspernatur perferendis, sed unde doloribus, commodi debitis eveniet, in, velit illo minus!</p>
+      </div>
+    </section>
+
+   <section class="third-container">
+    <div class="codebox"></div>
+    <div class="fizz">
+      <h2> Fizz Buzz <span> November 15th, 2017 </span></h2>
+    <div class="fizz-info">
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex expedita voluptas explicabo voluptates, ducimus aliquid quaerat porro possimus magnam culpa id, aperiam tempore enim eius, aliquam minus quo, laborum nesciunt.</p>
+  </div>
+      </div>
+    </section>
+
+
+</main>
+
+  <footer>
+    <div class="footer-first">
+    <h2> Stay connected with me. </h2>
+    </div>
+    <div class="footer-second">
+      <ul>
+        <li><img src="/images/facebook-icon.png" height="90" alt="fb"></li>
+        <li><img src="/images/circle.png" height="90" alt="twit"></li>
+        <li><img src="/images/githublink.png" height="90" alt="github"></li>
+        <li><img src="/images/linkedin-round.png" height="90" alt=""></li>
+      </ul>
+
+    </div>
+    <div class="footer-third">
+      <p>Copyright &copy; 2017 Garret Morales. Built with &#x2665 at The Iron Yard.</p>
+
+    </div>
+  </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
